@@ -177,8 +177,10 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Fix for a couple of "what if tool not found" exceptions in framework.
     - Add Textfile/Substfile to default environment. (issue #3147)
     - Improve finding of Microsoft compiler: add a 'products' wildcard
-      in case Build Tools only is installed; search for cl.exe in located
-      path instead of just looking for a couple of built-in locations.
+      in case 2017 Build Tools only is installed as it is considered a separate
+      product from the default Visual Studio; search for cl.exe in located
+      path instead of just looking for a couple of built-in locations as
+      2017 products are putting cl.exe deeper down the heirarchy.
 
   From Bernhard M. Wiedemann:
     - Update SCons' internal scons build logic to allow overriding build date 
